--- a/etc/collectd/collectd.conf
+++ b/etc/collectd/collectd.conf
@@ -903,19 +903,104 @@ LoadPlugin write_graphite
     #     Instance "IF-MIB::ifName"
     #     Values "IF-MIB::ifHCInUcastPkts" "IF-MIB::ifHCOutUcastPkts"
     # </Data>
-#    <Data "ifmib_if_errors64">
-#      Type "if_errors"
-#      Table true
-#      Instance "IF-MIB::ifName"
-#      Values "IF-MIB::ifHCInErrors" "IF-MIB::ifHCOutErrors"
-#    </Data>
+	#    <Data "ifmib_if_errors64">
+	#      Type "if_errors"
+	#      Table true
+	#      Instance "IF-MIB::ifName"
+	#      Values "IF-MIB::ifHCInErrors" "IF-MIB::ifHCOutErrors"
+	#    </Data>
     # <Data "std_traffic">
     #   Type "if_octets"
     #   Table true
     #   Instance "IF-MIB::ifDescr"
     #   Values "IF-MIB::ifInOctets" "IF-MIB::ifOutOctets"
     # </Data>
-#####
+########
+#SW-MIB#
+########
+    # <Data "swFCPortTooManyRdys">
+    #     Type "sw_FCPortTooManyRdys"
+    #     Table true
+    #     Instance "SW-MIB::swFCPortIndex"
+    #     Values "SW-MIB::swFCPortTooManyRdys"
+    # </Data>
+    # <Data "swFCPortNoTxCredits">
+    #     Type "sw_FCPortNoTxCredits"
+    #     Table true
+    #     Instance "SW-MIB::swFCPortIndex"
+    #     Values "SW-MIB::swFCPortNoTxCredits"
+    # </Data>
+    # <Data "swFCPortRxEncInFrs">
+    #     Type "sw_FCPortRxEncInFrs"
+    #     Table true
+    #     Instance "SW-MIB::swFCPortIndex"
+    #     Values "SW-MIB::swFCPortRxEncInFrs"
+    # </Data>
+    # <Data "swFCPortRxCrcs">
+    #     Type "sw_FCPortRxCrcs"
+    #     Table true
+    #     Instance "SW-MIB::swFCPortIndex"
+    #     Values "SW-MIB::swFCPortRxCrcs"
+    # </Data>
+    # <Data "swFCPortRxTruncs">
+    #     Type "sw_FCPortRxTruncs"
+    #     Table true
+    #     Instance "SW-MIB::swFCPortIndex"
+    #     Values "SW-MIB::swFCPortRxTruncs"
+    # </Data>
+    # <Data "swFCPortRxTooLongs">
+    #     Type "sw_FCPortRxTooLongs"
+    #     Table true
+    #     Instance "SW-MIB::swFCPortIndex"
+    #     Values "SW-MIB::swFCPortRxTooLongs"
+    # </Data>
+    # <Data "swFCPortRxBadEofs">
+    #     Type "sw_FCPortRxBadEofs"
+    #     Table true
+    #     Instance "SW-MIB::swFCPortIndex"
+    #     Values "SW-MIB::swFCPortRxBadEofs"
+    # </Data>
+    # <Data "swFCPortRxEncOutFrs">
+    #     Type "sw_FCPortRxEncOutFrs"
+    #     Table true
+    #     Instance "SW-MIB::swFCPortIndex"
+    #     Values "SW-MIB::swFCPortRxEncOutFrs"
+    # </Data>
+    # <Data "swFCPortRxBadOs">
+    #     Type "sw_FCPortRxBadOs"
+    #     Table true
+    #     Instance "SW-MIB::swFCPortIndex"
+    #     Values "SW-MIB::swFCPortRxBadOs"
+    # </Data>
+    # <Data "swFCPortC3Discards">
+    #     Type "sw_FCPortC3Discards"
+    #     Table true
+    #     Instance "SW-MIB::swFCPortIndex"
+    #     Values "SW-MIB::swFCPortC3Discards"
+    # </Data>
+    # <Data "swFCPortMcastTimedOuts">
+    #     Type "sw_FCPortMcastTimedOuts"
+    #     Table true
+    #     Instance "SW-MIB::swFCPortIndex"
+    #     Values "SW-MIB::swFCPortMcastTimedOuts"
+    # </Data>
+	####
+    # https://docs.broadcom.com/doc/FOS-82x-MIB-RM
+    # https://github.com/librenms/librenms/tree/master/mibs/brocade
+	# /usr/share/collectd/types.db to mod
+	# sw_FCPortTooManyRdys    value:DERIVE:0:U
+	# sw_FCPortNoTxCredits    value:DERIVE:0:U
+	# sw_FCPortRxEncInFrs    value:DERIVE:0:U
+	# sw_FCPortRxCrcs    value:DERIVE:0:U
+	# sw_FCPortRxTruncs    value:DERIVE:0:U
+	# sw_FCPortRxTooLongs    value:DERIVE:0:U
+	# sw_FCPortRxBadEofs    value:DERIVE:0:U
+	# sw_FCPortRxEncOutFrs    value:DERIVE:0:U
+	# sw_FCPortRxBadOs    value:DERIVE:0:U
+	# sw_FCPortC3Discards    value:DERIVE:0:U
+	# sw_FCPortMcastTimedOuts    value:DERIVE:0:U
+	####
+########
 #	<Host "some.server.mydomain.org">
 #		Address "192.168.0.42"
 #		Version 2
