--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -79,33 +79,33 @@ ExtendedStatus On
 
 <VirtualHost *:80>
 
-	ProxyPass /sexiadmin/ !
-        Alias /sexiadmin/   /var/www/admin/
-        <Directory /var/www/admin/>
-                Order allow,deny
-                Allow from all
-        </Directory>
+	# ProxyPass /sexiadmin/ !
+        # Alias /sexiadmin/   /var/www/admin/
+        # <Directory /var/www/admin/>
+        #         Order allow,deny
+        #         Allow from all
+        # </Directory>
 
-        ProxyPass /favicon.ico !
-        Alias /favicon.ico /var/www/admin/images/favicon.ico
+        # ProxyPass /favicon.ico !
+        # Alias /favicon.ico /var/www/admin/images/favicon.ico
 
-	SetEnv force-proxy-request-1.0 1
-	SetEnv proxy-nokeepalive 1
-        ProxyPreserveHost On
+	# SetEnv force-proxy-request-1.0 1
+	# SetEnv proxy-nokeepalive 1
+        # ProxyPreserveHost On
         
-        ProxyPass /netdata/ http://127.0.0.1:19999/
-	ProxyPass / http://127.0.0.1:3000/
+        # ProxyPass /netdata/ http://127.0.0.1:19999/
+	# ProxyPass / http://127.0.0.1:3000/
 
 
-        ## HTTPS REDIRECT
-        # RewriteEngine On
-        # RewriteCond %{HTTPS} off
-        # RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+        # HTTPS REDIRECT
+        RewriteEngine On
+        RewriteCond %{HTTPS} off
+        RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
 
-	ErrorLog /var/log/apache2/error.log
-	LogLevel warn
-	CustomLog /var/log/apache2/access.log combined
-	ServerSignature Off
+	# ErrorLog /var/log/apache2/error.log
+	# LogLevel warn
+	# CustomLog /var/log/apache2/access.log combined
+	# ServerSignature Off
 
 </VirtualHost>
 
