--- a/opt/graphite/conf/storage-aggregation.conf
+++ b/opt/graphite/conf/storage-aggregation.conf
@@ -42,3 +42,18 @@ aggregationMethod = sum
 pattern = .\.errorsTx.
 xFilesFactor = 0.0
 aggregationMethod = sum
+
+[veeamObjectRestorePoints]
+pattern = ^veeam.*\.objectRestorePoints
+xFilesFactor = 0.0
+aggregationMethod = last
+
+[veeamRestorePointsCount]
+pattern = ^veeam.*\.restorePointsCount
+xFilesFactor = 0.0
+aggregationMethod = sum
+
+[veeamResult]
+pattern = ^veeam.*\.result
+xFilesFactor = 0.0
+aggregationMethod = last
