--- a/opt/graphite/conf/storage-aggregation.conf
+++ b/opt/graphite/conf/storage-aggregation.conf
@@ -43,6 +43,11 @@ pattern = .\.errorsTx.
 xFilesFactor = 0.0
 aggregationMethod = sum
 
+[PathState]
+pattern = .\.superstats\.PathState\.*
+xFilesFactor = 0.0
+aggregationMethod = last
+
 [veeamObjectRestorePoints]
 pattern = ^veeam.*\.objectRestorePoints
 xFilesFactor = 0.0
