--- a/opt/graphite/conf/storage-aggregation.conf
+++ b/opt/graphite/conf/storage-aggregation.conf
@@ -48,6 +48,11 @@ pattern = .\.superstats\.PathState\.*
 xFilesFactor = 0.0
 aggregationMethod = last
 
+[overallStatus]
+pattern = .\.quickstats\.overallStatus\.*
+xFilesFactor = 0.0
+aggregationMethod = last
+
 [veeamObjectRestorePoints]
 pattern = ^veeam.*\.objectRestorePoints
 xFilesFactor = 0.0
