--- a/opt/graphite/conf/storage-aggregation.conf
+++ b/opt/graphite/conf/storage-aggregation.conf
@@ -67,3 +67,8 @@ aggregationMethod = sum
 pattern = ^veeam.*\.result
 xFilesFactor = 0.0
 aggregationMethod = last
+
+[veeamStatus]
+pattern = ^veeam.*\.status
+xFilesFactor = 0.0
+aggregationMethod = last
