--- a/opt/graphite/conf/storage-schemas.conf
+++ b/opt/graphite/conf/storage-schemas.conf
@@ -38,19 +38,19 @@ retentions = 5m:24h,10m:48h,60m:7d,240m:30d,720m:90d,2880m:1y
 
 [vsan_sync]
 pattern = .*\.vsan\.SyncingVsanObjects\.
-retentions = 5m:24h,10m:48h,60m:7d,240m:30d,720m:90d
+retentions = 5m:24h,10m:48h,30m:96h,60m:7d,240m:30d,720m:90d
 
 [vsan_smart]
 pattern = .*\.vsan\.disk\.smart\.
-retentions = 5m:24h,10m:48h,60m:7d,240m:30d,720m:90d,2880m:1y
+retentions = 5m:24h,10m:48h,30m:96h,60m:7d,240m:30d,720m:90d,2880m:1y
 
 [vsan_spaceDetail]
 pattern = .*\.vsan\.spaceDetail\.
-retentions = 5m:24h,10m:48h,60m:7d,240m:30d,720m:90d,2880m:1y,5760m:2y,17280m:5y
+retentions = 5m:24h,10m:48h,30m:96h,60m:7d,240m:30d,720m:90d,2880m:1y,5760m:2y,17280m:5y
 
 [vsan]
 pattern = ^vsan\.
-retentions = 5m:12h,10m:24h,20m:48h,80m:7d,320m:30d,640m:90d
+retentions = 5m:12h,10m:24h,20m:48h,40m:96h,80m:7d,320m:30d,640m:90d
 
 [veeam]
 pattern = ^veeam\.
@@ -58,4 +58,4 @@ retentions = 5m:7d,10m:30d,15m:90d,30m:120d,120m:1y
 
 [anything_else]
 pattern = .*
-retentions = 5m:24h,10m:48h,60m:7d,240m:30d,720m:90d,2880m:1y,5760m:2y,17280m:5y
+retentions = 5m:24h,10m:48h,30m:96h,60m:7d,240m:30d,720m:90d,2880m:1y,5760m:2y,17280m:5y
