--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -118,8 +118,11 @@ ExtendedStatus On
         ProxyPass /sexiadmin/ !
         Alias /sexiadmin/   /var/www/admin/
         <Directory /var/www/admin/>
-                Order allow,deny
-                Allow from all
+                RewriteEngine On
+                RewriteCond %{HTTP_REFERER} /sexigraf-web-admin [NC,OR]
+                RewriteCond %{HTTP_REFERER} /sexiadmin/ [NC]
+                RewriteRule .* - [L]
+                RewriteRule .* - [F]
         </Directory>
 
         ProxyPass /favicon.ico !
