--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -125,6 +125,25 @@ ExtendedStatus On
                 RewriteRule .* - [F]
         </Directory>
 
+        ProxyPass /sexihistory/ !
+        Alias /sexihistory/   /mnt/wfs/inventory/
+        <Directory /mnt/wfs/inventory/>
+                RewriteEngine On
+                RewriteCond %{HTTP_REFERER} /sexigraf-web-admin [NC,OR]
+                RewriteCond %{HTTP_REFERER} /sexiadmin/ [NC]
+                RewriteRule .* - [L]
+                RewriteRule .* - [F]
+                Options Indexes
+                AllowOverride All
+                Require all granted
+                Allow from all
+        </Directory>
+
+        <Files "vipscredentials.xml">
+                Order Allow,Deny
+                Deny from all
+        </Files>
+
         ProxyPass /favicon.ico !
         Alias /favicon.ico /var/www/admin/images/favicon.ico
 
