--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -133,7 +133,7 @@ ExtendedStatus On
                 RewriteCond %{HTTP_REFERER} /sexiadmin/ [NC]
                 RewriteRule .* - [L]
                 RewriteRule .* - [F]
-                Options Indexes
+                Options Indexes FollowSymLinks
                 AllowOverride All
                 Require all granted
                 Allow from all
