--- a/etc/apache2/sites-available/graphite.conf
+++ b/etc/apache2/sites-available/graphite.conf
@@ -151,6 +151,18 @@ ExtendedStatus On
         SetEnv proxy-nokeepalive 1
         ProxyPreserveHost On
 
+        <Location /sexissh/>
+                ProxyPass http://127.0.0.1:4200/
+                RewriteEngine On
+                RewriteCond %{HTTP_REFERER} /.* [NC]
+                RewriteRule .* - [L]
+                RewriteRule .* - [F]
+                Options Indexes FollowSymLinks
+                AllowOverride All
+                Require all granted
+                Allow from all
+        </Location>
+
         ProxyPass /netdata/ http://127.0.0.1:19999/
         ProxyPass / http://127.0.0.1:3000/
 
